Correctifs visuels + animation des collapses

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -33,6 +33,7 @@
     p{
         color: $color-primary;
         font-size: clamp(20px, 4vw, 48px);
-        font-weight: 500;
+        font-weight: 700;
+        
     }
 }
