--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -47,7 +47,7 @@
         bottom: 20px;
         left: 20px;
         right: 20px;
-        font-weight: 500;
+        font-weight: 700;
         font-size: clamp(12px, 3vw, 18px);
         color: $color-primary;
     }
