--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,7 +3,7 @@
 .nav_list{
     display: flex;
     gap: 50px;
-    color: $color-secondary;
+    color: #000;
     font-size: clamp(12px, 2.5vw, 24px);
     @media screen and (max-width: 700px){
         gap: 20px;
@@ -11,9 +11,9 @@
     &_item{
         &_active{
             position: relative;
-            color: $color-secondary;
+            color: #000;
             transition: all 0.2s ease-in-out;
-            text-decoration: underline solid $color-secondary; 
+            text-decoration: underline solid #000; 
             
         }
     }
