--- a/src/pages/accomodation/accomodation.scss
+++ b/src/pages/accomodation/accomodation.scss
@@ -15,7 +15,20 @@
             flex-direction: column;
             gap: 10px;
             font-weight: 500;
-            font-size: 14px;
+  h1 {
+    font-size: 36px;
+    @media screen and (max-width: 500px){
+                    font-size: 18px;   
+                }
+  }
+
+  p {
+    font-size: 18px;
+    color: black;
+        @media screen and (max-width: 500px){
+                    font-size: 18px;   
+                }
+  }
             button{
                 display: inline;
                 padding: 5px 15px;
