--- a/src/pages/notFound/notFound.scss
+++ b/src/pages/notFound/notFound.scss
@@ -25,6 +25,8 @@
             text-align: center;
             font-weight: 500;
             font-size: clamp(12px, 2.5vw, 18px);
+            color: #000;
+            text-decoration: underline;
         }
     }
 }
